--- a/src/views/editBeneficiary.ejs
+++ b/src/views/editBeneficiary.ejs
@@ -171,7 +171,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Número Cuenta</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="number"
+                                                type="text"
                                                 name="nro_cuenta_beneficiario"
                                                 id="nro_cuenta_beneficiario"
                                                 value="<%= beneficiary.nro_cuenta_beneficiario %>" 
