--- a/src/views/lifePolicyForm.ejs
+++ b/src/views/lifePolicyForm.ejs
@@ -147,14 +147,24 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_poliza" required>
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="REDES SOCIALES">REDES SOCIALES</option>
-                                                        <option value="PÁGINA WEB">PÁGINA WEB</option>
-                                                        <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
-                                                        <option value="AGENTE PROPIO">AGENTE PROPIO</option>
+                                                    <select class="form-control" name="nombre_ejecutivos" multiple required>
+                                                        <% executives.forEach((executive) => { %>
+                                                            <% if (executive.tipo_ejecutivo === 'SUSCRIPCIÓN') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } else if (executive.tipo_ejecutivo === 'SINIESTROS') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } else if (executive.tipo_ejecutivo === 'COBRANZAS') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } %>
+                                                        <% }); %>
                                                     </select>
                                                 </div>
                                             </div>
@@ -264,6 +274,19 @@
                                                         class="form-control currency_format"
                                                         required
                                                     >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="tipo_canal_poliza" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="REDES SOCIALES">REDES SOCIALES</option>
+                                                        <option value="PÁGINA WEB">PÁGINA WEB</option>
+                                                        <option value="ÁREA BY ATINA">ÁREA BY ATINA</option>
+                                                        <option value="AGENTE PROPIO">AGENTE PROPIO</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -612,7 +635,7 @@
                                                             type="text" 
                                                             name="porcentaje_agente_comision"
                                                             id="porcentaje_agente_comision"
-                                                            placeholder="Porcentaje Agente Propio *"
+                                                            value="0"
                                                             class="form-control number_format"
                                                             required
                                                         >
