--- a/src/views/vehicleCollectiveForm.ejs
+++ b/src/views/vehicleCollectiveForm.ejs
@@ -146,6 +146,29 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="nombre_ejecutivos" multiple required>
+                                                        <% executives.forEach((executive) => { %>
+                                                            <% if (executive.tipo_ejecutivo === 'SUSCRIPCIÓN') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } else if (executive.tipo_ejecutivo === 'SINIESTROS') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } else if (executive.tipo_ejecutivo === 'COBRANZAS') { %>
+                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
+                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                                </optgroup>
+                                                            <% } %>
+                                                        <% }); %>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -494,7 +517,7 @@
                                                             type="text"
                                                             name="porcentaje_agente_comision"
                                                             id="porcentaje_agente_comision"
-                                                            placeholder="Porcentaje Agente Propio *"
+                                                            value="0"
                                                             class="form-control number_format" 
                                                             required
                                                         >
