Arreglos en los modulos de poliza individual y colectivo, beneficiario, vehiculo, riesgo diverso y reportes

--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -893,6 +893,17 @@
 </script>
 
 <script>
+    function showList() {
+        var getSelectValue = document.getElementById("tipo_canal_poliza").value;
+        if (getSelectValue === 'AGENTE PROPIO') {
+            document.getElementById("searchList").style.display = "block";
+        } else {
+            document.getElementById("searchList").style.display = "none";
+        }
+    }   
+</script>
+
+<script>
     function currencySignChange() {
         let coinType = document.getElementById("tipo_moneda_poliza").value;
         if (coinType === 'BOLÍVAR') {
