--- a/src/views/layouts/footerCollectiveWizardForm.ejs
+++ b/src/views/layouts/footerCollectiveWizardForm.ejs
@@ -626,6 +626,17 @@
 </script>
 
 <script>
+    function showList() {
+        var getSelectValue = document.getElementById("tipo_canal_colectivo").value;
+        if (getSelectValue === 'AGENTE PROPIO') {
+            document.getElementById("searchList").style.display = "block";
+        } else {
+            document.getElementById("searchList").style.display = "none";
+        }
+    }   
+</script>
+
+<script>
     function currencySignChange() {
         let coinType = document.getElementById("tipo_moneda_colectivo").value;
         if (coinType === 'BOLÍVAR') {
