--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -164,23 +164,40 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos</label>
+                                        <div class="form-group" id="searchList" style="display:none">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Agentes Propios</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="nombre_ejecutivos" multiple required>
+                                                    <select class="form-control" name="nombre_agentes_propios" multiple>
+                                                        <% ownAgents.forEach((ownAgent) => { %>
+                                                            <option value="<%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %>"><%= ownAgent.nombre_agente_propio %> <%= ownAgent.apellido_agente_propio %></option>
+                                                        <% }); %>
+                                                        <% executives.forEach((executive) => { %>
+                                                            <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                        <% }); %>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Suscripción</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="nombre_ejecutivos_suscripcion" multiple required>
                                                         <% executives.forEach((executive) => { %>
                                                             <% if (executive.tipo_ejecutivo === 'SUSCRIPCIÓN') { %>
-                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
-                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
-                                                                </optgroup>
-                                                            <% } else if (executive.tipo_ejecutivo === 'SINIESTROS') { %>
-                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
-                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
-                                                                </optgroup>
-                                                            <% } else if (executive.tipo_ejecutivo === 'COBRANZAS') { %>
-                                                                <optgroup label="<%= executive.tipo_ejecutivo %>">
-                                                                    <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
-                                                                </optgroup>
+                                                                <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                            <% } %>
+                                                        <% }); %>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Siniestros</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="nombre_ejecutivos_siniestros" multiple required>
+                                                        <% executives.forEach((executive) => { %>
+                                                            <% if (executive.tipo_ejecutivo === 'SINIESTROS') { %>
+                                                                <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
                                                             <% } %>
                                                         <% }); %>
                                                     </select>
@@ -298,7 +315,7 @@
                                         <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Canal</label>
                                                 <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_canal_poliza" required>
+                                                    <select class="form-control" name="tipo_canal_poliza" id="tipo_canal_poliza" onchange="showList()" required>
                                                         <option value="">Seleccione *</option>
                                                         <option value="REDES SOCIALES">REDES SOCIALES</option>
                                                         <option value="PÁGINA WEB">PÁGINA WEB</option>
@@ -319,6 +336,19 @@
                                                         class="form-control number_format"
                                                         required
                                                     >
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivos de Cobranzas</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="nombre_ejecutivos_cobranzas" multiple required>
+                                                        <% executives.forEach((executive) => { %>
+                                                            <% if (executive.tipo_ejecutivo === 'COBRANZAS') { %>
+                                                                <option value="<%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %>"><%= executive.nombre_ejecutivo %> <%= executive.apellido_ejecutivo %></option>
+                                                            <% } %>
+                                                        <% }); %>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
